testsuite/tests/rename/should_fail/rnfail057.hs
{-# LANGUAGE KindSignatures #-}

module BindKindName where

type Foo (a :: DontExistKind) = a
