testsuite/tests/rename/should_fail/rnfail057.stderr

rnfail057.hs:5:16: error: [GHC-76037]
    Not in scope: type constructor or class ‘DontExistKind’
